SERVER-58130 Disable incompatible collMod options for time-series collections